# jessica9740.github.io

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SKILLS.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.claude/: settings.json
config/: config.yaml
content/: 2025-01-21-agent-mcp-만드는-방법-처음부터-끝까지-따라하는-실전-가이드.md  2025-01-21-claude-api-토큰-절약하는-7가지-실전-방법-비용을-절반으로-줄이는-전략.md  2025-01-21-claude-api-토큰-절약하는-7가지-실전-전략-비용을-50-줄이는-방법.md  2025-01-21-mcp-model-context-protocol-란-ai와-데이터를-연결하는-새로운-표준.md  2025-01-21-테스트-test-란-무엇인가-종류와-효과적인-활용법-완벽-가이드.md  2025-01-22-mac-초기화-이후-최초-설정-방법-완벽-가이드-개발자도-만족하는-셋업.md  2025-01-22-mcp-model-context-protocol-완벽-가이드-ai와-외부-세계를-연결하는-표준-프로토콜.md  2025-01-22-콜드플레이-coldplay-완벽-가이드-영국-록-밴드의-역사와-음악적-여정.md  2025-01-23-msp-만드는-방법-완벽-가이드-매니지드-서비스-프로바이더-창업-단계별-전략.md  2025-01-27-msp-미세스플래시파우더-만드는-방법과-화학-실험의-기초-이해.md  2025-01-27-배탈이-났을-때-꼭-알아야-할-대처법과-음식-가이드.md  2025-01-27-테스트-test-란-무엇인가-종류-목적-그리고-효과적인-활용법.md  2026-05-03-agent-mcp-만드는-방법.md  2026-05-05-계란찜기-사용법-완벽-가이드-초보자도-실패-없는-계란요리-비법.md  2026-05-05-계란찜기-완벽-사용법-부드럽고-촉촉한-계란찜-만드는-모든-방법.md  2026-05-05-골프-퍼팅-잘하는-법-스코어를-줄이는-과학적-접근.md  2026-05-05-베토벤-교향곡-전곡-완벽-정리-1번부터-9번까지의-모든-것.md  2026-05-05-스티븐-스필버그-영화-마스터하기-단계별-감상-가이드와-데이터-분석-튜토리얼.md  2026-05-05-테니스-게임-룰-완벽-가이드-초보자를-위한-점수-계산부터-경기-진행까지.md
posts/: agent-mcp-만드는-방법-처음부터-끝까지-따라하는-실전-가이드.html  agent-mcp-만드는-방법.html  claude-api-토큰-절약하는-7가지-실전-방법-비용을-절반으로-줄이는-전략.html  claude-api-토큰-절약하는-7가지-실전-전략-비용을-50-줄이는-방법.html  index.html  mac-초기화-이후-최초-설정-방법-완벽-가이드-개발자도-만족하는-셋업.html  mcp-model-context-protocol-란-ai와-데이터를-연결하는-새로운-표준.html  (+13 more)
(+21 files in other folders)
