[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-blog"
version = "0.1.0"
description = "Claude AI로 블로그를 자동 생성하고 GitHub Pages에 배포하는 도구"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "python-frontmatter>=1.1.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "ghp-import>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
auto-blog = "auto_blog.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
